fixed modal on mobile

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -65,7 +65,8 @@ body {
   overflow-x: hidden;
   max-width:100vw;
   width:100vw;
-  padding-right: 0 !important
+  padding-right: 0 !important;
+  touch-action: pan-y;
 
 }
 .hover-secondary{
